styles/styles.css
.font-inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
}

.back-color
{
    background-color: #F5F8FF;
}
.font-raleway 
{
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.bg-main
{
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 7%;
}

header
{
    background-image: url(../Assets/Hero-bg.png);    
    max-width: 100%;
    background-color: aquamarine;
    min-height: 550px;
    max-height: 700px;
    /* background-repeat: no-repeat; */
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.bg-head nav
{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 0px;
    padding-top: 1%;
    margin-left: 5%;
    margin-right: 5%;
}

.bg-head nav h1
{
    width: 99px;
    height: 51px;
    color: #4E47FF;
    font-size: 34px;
    font-weight: bolder;
}

nav ul li
{
    list-style: none;
}

button a
{
    text-decoration: none;
    color: white;
}

.head-middle
{
    padding-top: 40px;
    align-content: center;
    text-align: center;
    /* width: 905px;
    height: 152px; */
    font-size: 65px;
    font-weight: bold;
    color: #252432;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.btn
{
    background-color: #4E47FF;
    color: white;
    padding: 12px 36px;
    gap: 10px;
    border-radius: 10px;
    border: none;
    transition: 100ms;
    cursor: pointer;
}
.btn:hover {
  background-color: #3cff00;
  font-size: large;
  font-weight: bolder;
    color: #4E47FF;
  /* margin: 0% 3% 1%; */

}

.btn-up
{
    width: 152px;
    height: 58px;
}

.btn-mid
{
    margin-top: 50px;
    width: 210px;
    height: 58px;
}


.action
{
    display: flex;
    justify-content: space-between;
    align-content: center;
    align-items: center;
    text-align: left;
    align-items: center;
    margin-bottom: 150px;
}


.action-left
{
    width: 517px;
    height: 203px;
}

.action-head
{
    font-size: 42px;
    font-weight: bold;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.action-para
{
    font-size: 24px;
    color: #252432;
    opacity: 50%;
}

.focus img
{
    width: auto;
    height: auto;
    border-radius: 48px;
}

.pro-user
{
    background-color: rgb(78, 71, 255, .1);
    /* width: 60%; */
    text-align: center;
    align-content: center;
    justify-content: space-around;
    border-radius: 24px;
    padding: 100px 0px;
}

.user
{
    display: flex;
    align-content: center;
    justify-content: space-around;
}

.user-count
{
    align-content: center;
}

.user-count h1
{
    font-size: 80px;
    margin: 0%;
    color: #4E47FF;
}

.user-count p
{
    color: rgb(0,0,0,.5);
    margin: 0%;
    font-size: 20px;
}

.pro-user h3
{
    margin-top: 0%;
    font-size: 38px;
    color: #252432;
    font-weight: bold;
}

.user-say h3
{
    margin-top: 150px;
    font-size: 42px;
    color: #252432;
    font-weight: bold;
    text-align: center;
}

.all-comments
{
    display: flex;    
    justify-content: center;
    gap: 10px;
}

.comment-card
{
    background-color: rgba(255, 255, 255, 0.5);
    border-color: #F2EDED;
    border-style: solid;
    border-width: 1px;
    width: auto;
    color: #1E1E1E;
    border-radius: 24px;
    padding: 0px 20px;
    align-content: center;
    justify-content: space-between;
}

.comment-card-p1
{
    padding-left: 0px;
    display: flex;
    list-style: none;
}

.comment-card-p2
{
    padding-left: 15px;
    list-style: none;
}

.review-name
{
    color: #757575;
    font-weight: bolder;
}

.review-date
{
    color: #B3B3B3;
    font-weight: 400;
}

.icon-star
{
    display: flex;
    list-style: none;
    padding: 0px;
}

.focus
{
    margin-top: 100px;
    padding: 40px;
    background-color:rgba(255, 255, 255, 1);
    border-radius: 20px;
    align-content: center;
    text-align: center;
}

.focus h2
{
    font-size: 50px;
    font-weight: bold;
    padding: 0px;
    margin: 10px;
}

.focus h6
{
    color: rgb(0,0,0,.5);
    font-size: 16px;
    font-weight: 400;
    padding: 0px;
    margin: 0px;
}

.get-btn
{
    background-color: #4E47FF;
    color: white;
    padding: 12px 36px;
    gap: 10px;
    width: 215px;
    height: 50px;
    border-style: solid;
    border-radius: 10px;
    border: #1E1E1E;
    font-size: 16px;
    font-weight: 400;
    margin: 15px;
}

.contact
{
    /* margin: 10%; */
    display: flex;
    justify-content: space-around;
    align-content: center;
    align-items: center;
}

.contact-left
{
    font-size: 97px;
    font-weight: bold;
    width: 528px;
}

.contact-right
{
    font-size: 18px;
}

.contact-right h6
{
    padding-bottom: 10px;
    margin-bottom: 0px;
}
.abc
{
    background-color: #fcf9f9;
    border-style: solid;
    border-color: #252432;
    border-width: .1ch;
    padding-left: 10px;
    height: 60px;
    width: 497px;
    border-radius: 5px;
    display: block;
}

.contact-right button
{
    width: 507px;
    font-size: 16px;
}

.btn-submit
{
    width: 100%;
    height: 62px;
    background-color: #4E47FF;
    color: white;
    font-weight: 800;
    margin-top: 15px;
    border-radius: 10px;
}

textarea
{
    padding: 10px;
}

footer
{
    margin-top: 50px;
    display: flex;
    align-content: center;
    justify-content: space-between;
    text-align: center;
    align-items: center;
    flex-direction: column;
    padding: 0px;
    background-color: #FFFFFF;
}

.foot-logo
{
    font-size: 100px;
    color: #4E47FF;
    margin-bottom: 0%;
}

.foot-foot
{
    max-width: 530px;
    color: #8987A1;
    font-size: 16px;
}

.nav-li a
{
    text-decoration: none;
    color: #8987A1;
}

footer nav
{
    display: flex;
    column-gap: 40px;
    max-width: 530px;
    margin-bottom: 50px;
}

.nav-li
{
    text-decoration: none;
    display: flex;
    text-align: center;
    justify-content: space-around;
    list-style: none;
}

.last-dance
{
    cursor: pointer;
}

.last-dance:hover {
  background-color: #0800ff;
  font-size: large;
  font-weight: bolder;
  /* padding: 2px 4px; */
  color: #FFFFF;
  margin: .5%;
}

